--- a/package.json
+++ b/package.json
@@ -62,11 +62,9 @@
     "@types/lodash": "^4.17.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@umijs/lint": "^4.0.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.20",
-    "typescript": "^4.1.2",
-    "yorkie": "^2.0.0",
-    "@umijs/lint": "^4.0.0",
     "dumi": "^2.3.0",
     "eslint": "^8.23.0",
     "father": "^4.1.0",
@@ -77,7 +75,9 @@
     "prettier-plugin-packagejson": "^2.2.18",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "stylelint": "^14.9.1"
+    "stylelint": "^14.9.1",
+    "typescript": "^4.1.2",
+    "yorkie": "^2.0.0"
   },
   "dependencies": {
     "@ant-design/icons": "^4.0.6",
@@ -86,6 +86,7 @@
     "@antv/x6-react-components": "^1.1.15",
     "@antv/x6-react-shape": "^1.6.0",
     "antd": "^4.5.3",
+    "axios": "^1.7.3",
     "react": "17.x",
     "react-dom": "17.x",
     "react-json-view": "^1.19.1"
